<resources>
    <string name="app_name">GBlesson1</string>
    <string name="_1">1</string>
    <string name="_8">8</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="dev">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="commas">.</string>
    <string name="multipli">*</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="screen_reader_main_calc">Значение</string>
    <string name="change_theme">Сменить тему</string>
    <string name="appcompat_daynight">AppCompat DayNight</string>
    <string name="material_noactionbar">Material NoActionBar</string>
    <string name="material_daynight">Material DayNight</string>
    <string name="material_light">Material light</string>
</resources>