<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ChangeThemeActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/materialLight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/material_light" />

    <Button
        android:id="@+id/materialDayNight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/material_daynight" />

    <Button
        android:id="@+id/materialNoActionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/material_noactionbar" />

    <Button
        android:id="@+id/appcompatDayNight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/appcompat_daynight" />
</LinearLayout>